cluster/config/kiali/kiali-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-system
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.kube.home"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "kiali.kube.home"
  gateways:
  - istio-system
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
